@@ -15,17 +15,14 @@ dmtxwrite \- create Data Matrix barcodes
 \fBdmtxwrite\fP encodes data from a file or standard input, and writes the resulting ECC200 Data Matrix barcode as an image.
 .SH OPTIONS
 .TP
-\fB\-c\fP, \fB\-\-color\fP=\fICOLOR\fP
-Barcode color. (not implemented)
-.TP
-\fB\-b\fP, \fB\-\-bg-color\fP=\fICOLOR\fP
-Background color. (not implemented)
+\fB\-c\fP, \fB\-\-codewords\fP
+Print codeword listing instead of creating barcode.
 .TP
 \fB\-d\fP, \fB\-\-module\fP=\fINUM\fP
-Module size. (in pixels)
+Module size in pixels.
 .TP
 \fB\-m\fP, \fB\-\-margin\fP=\fINUM\fP
-Margin size. (in pixels)
+Margin size in pixels.
 .TP
 \fB\-e\fP, \fB\-\-encoding\fP=[bfactxe8]
 Encodation scheme.
@@ -38,31 +35,38 @@ Encodation scheme.
    e = EDIFACT          ASCII values 32-94
    8 = Base 256         all byte values 0-255
 .TP
-\fB\-f\fP, \fB\-\-format\fP=[pmac]
-Barcode output format.
-   p = PNG    [default] PNG image
-   m = PNM              PNM image
-   a = ASCII            ASCII art barcode (preview only)
-   c = codewords        Codeword listing  (preview only)
+\fB\-f\fP, \fB\-\-format\fP=\fIFORMAT\fP
+Output image format (PNG [default], TIF, GIF, PDF, etc...).
+.TP
+\fB\-l\fP, \fB\-\-list-formats\fP
+List available image formats.
 .TP
 \fB\-o\fP, \fB\-\-output\fP=\fIFILE\fP
 Barcode output filename. Default is standard output.
 .TP
-\fB\-r\fP, \fB\-\-rotate\fP=\fIDEGREES\fP
-Rotation angle. (degrees) (not implemented)
+\fB\-p\fP, \fB\-\-preview\fP
+Print ASCII art preview to standard output.
 .TP
-\fB\-s\fP, \fB\-\-symbol-size\fP=\fISIZE\fP
-Symbol size specified in Rows x Cols.
-   Automatic \fISIZE\fP options:
-      s = Auto square  [default]
-      r = Auto rectangle
-   Manually specified \fISIZE\fP options for square symbols:
-      10x10,  12x12,   14x14,   16x16,   18x18,   20x20,
-      22x22,  24x24,   26x26,   32x32,   36x36,   40x40,
-      44x44,  48x48,   52x52,   64x64,   72x72,   80x80,
-      88x88,  96x96, 104x104, 120x120, 132x132, 144x144
-   Manually specified \fISIZE\fP options for rectangular symbols:
-       8x18,   8x32,   12x26,   12x36,   16x36,   16x48
+\fB\-r\fP, \fB\-\-rotate\fP=\fIDEGREES\fP
+Rotation angle in degrees (not implemented).
+.TP
+\fB\-s\fP, \fB\-\-symbol-size\fP=[sr|RxC]
+Symbol size (default "s"):
+   Automatic size options:
+      s = Auto square         r = Auto rectangle
+   Manual size options for square symbols:
+      10x10   12x12   14x14   16x16   18x18   20x20
+      22x22   24x24   26x26   32x32   36x36   40x40
+      44x44   48x48   52x52   64x64   72x72   80x80
+      88x88   96x96 104x104 120x120 132x132 144x144
+   Manually size options for rectangle symbols:
+       8x18    8x32   12x26   12x36   16x36   16x48
+.TP
+\fB\-C\fP, \fB\-\-color\fP=\fICOLOR\fP
+Barcode color (not implemented).
+.TP
+\fB\-B\fP, \fB\-\-bg-color\fP=\fICOLOR\fP
+Background color (not implemented).
 .TP
 \fB\-M\fP, \fB\-\-mosaic\fP
 Create non-standard Data Mosaic barcode.
