@@ -1,3 +1,4 @@
+31-Jan-2009: Experimental libdmtx Windows binaries now available
 23-Nov-2008: New release: libdmtx-0.6.0 (Release Notes)
 08-Oct-2008: Olivier Guilyardi added support for all major image formats! (SVN)
 04-Sep-2008: New release: libdmtx-0.5.2 (README)
